--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     const headshotImg = document.getElementById('headshot');
 
     async function fetchESPNMatches(query) {
-      const proxy = "https://api.allorigins.win/raw?url=";
-      const url = proxy + encodeURIComponent(`https://site.api.espn.com/apis/common/v3/search?query=${encodeURIComponent(query)}`);
+      const proxy = "https://thingproxy.freeboard.io/fetch/";
+      const url = proxy + `https://site.api.espn.com/apis/common/v3/search?query=${encodeURIComponent(query)}`;
       try {
         const res = await fetch(url);
         const data = await res.json();
